--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img class="logos__img" src="./images/Google.png" alt="Google">
             <img class="logos__img" src="./images/Dribble.png" alt="Dribble">
         </div>
-        <div class="copyright"> © 2014 - Kasper All Right Reserved</div>
+        <div class="copyright"> © 2014 - <span class="copyright__aqua">Kasper</span> All Right Reserved</div>
     </footer>
 </body>
 
