--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
 </head>
 
 <body class="wrapper">
-    <footer class="footer">
-        <div class="main-logo">
-            <img class="main-logo__img" src="./images/Kasper.png" alt="Kasper Logo">
-        </div>
-        <div class="tagline">WE ARE SOCIAL</div>
-        <div class="separator-line">
-            <img class="separator-line__img" src="./images/Separator.png" alt="Line">
-        </div>
-        <div class="logos">
-            <img class="logos__img" src="./images/Facebook.png" alt="Facebook">
-            <img class="logos__img" src="./images/Tweter.png" alt="Twitter">
-            <img class="logos__img" src="./images/Google.png" alt="Google">
-            <img class="logos__img" src="./images/Dribble.png" alt="Dribble">
-        </div>
-        <div class="copyright"> © 2014 - <span class="copyright__aqua">Kasper</span> All Right Reserved</div>
+    <div class="paper">
+        <footer class="footer">
+            <div class="main-logo">
+                <img class="main-logo__img" src="./images/Kasper.png" alt="Kasper Logo">
+            </div>
+            <div class="tagline">WE ARE SOCIAL</div>
+            <div class="separator-line">
+                <img class="separator-line__img" src="./images/Separator.png" alt="Line">
+            </div>
+            <div class="logos">
+                <img class="logos__img" src="./images/Facebook.png" alt="Facebook">
+                <img class="logos__img" src="./images/Tweter.png" alt="Twitter">
+                <img class="logos__img" src="./images/Google.png" alt="Google">
+                <img class="logos__img" src="./images/Dribble.png" alt="Dribble">
+            </div>
+            <div class="copyright"> © 2014 - <span class="copyright__aqua">Kasper</span> All Right Reserved</div>
+    </div>
     </footer>
 </body>
 
